--- a/templates/back/addresses/index.html.twig
+++ b/templates/back/addresses/index.html.twig
@@ -57,7 +57,7 @@
                                            href="{{ path('app_admin_addresses_edit', {'id': address.id }) }}">
                                             <span class="fa fa-pencil" style="font-size:22px; color: black"></span>
                                         </a>
-                                        <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_addresses_delete', {'id': address.id }) }}" onsubmit="return confirm('Are you sure you want to delete this address ?');">
+                                        <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_addresses_delete', {'id': address.id }) }}" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer cette adresse');">
                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ address.id) }}">
                                             <button class="border-0 bg-transparent" style="font-size:22px"><span class="fa fa-trash"></span></button>
                                         </form>
