--- a/templates/back/categories/index.html.twig
+++ b/templates/back/categories/index.html.twig
@@ -43,7 +43,7 @@
                                                href="{{ path('app_admin_categories_edit', {'id': category.id }) }}">
                                                 <span class="fa fa-pencil" style="font-size:22px; color: black"></span>
                                             </a>
-                                            <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_categories_delete', {'id': category.id }) }}" onsubmit="return confirm('Are you sure you want to delete this category ?');">
+                                            <form class="d-inline-block px-3" method="post" action="{{ path('app_admin_categories_delete', {'id': category.id }) }}" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer cette catégorie ?');">
                                                 <input type="hidden" name="_token" value="{{ csrf_token('delete_' ~ category.id) }}">
                                                 <button class="border-0 bg-transparent" style="font-size:22px"><span class="fa fa-trash"></span></button>
                                             </form>
