--- a/templates/emails/addProducts.html.twig
+++ b/templates/emails/addProducts.html.twig
@@ -46,7 +46,7 @@
                     <tr>
                         <td class="esd-email-paddings" valign="top">
                             <table cellpadding="0" cellspacing="0" class="es-content esd-header-popover" align="center">
-                                <tbody>
+                                <tbody>cd
                                     <tr>
                                         <td class="esd-stripe" esd-custom-block-id="7958" align="center">
                                             <table class="es-content-body" style="background-color: transparent;"
