--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -3,11 +3,11 @@
 {% block carousel %}{% endblock %}
 
 {% block content %}
-  <!-- SESSION : SEARCH BY CATEGORY --> 
+  <!-- SESSION : SEARCH BY CATEGORY -->
   <div class="">
     <div class="mx-auto">
       <h4 class="">Des millions de petites annonces et autant d’occasions pour se faire plaisir</h4>
-      <div class="row">
+      {#<div class="row">
         <div class="custom-control custom-radio custom-control-inline col-3 col-sm-2 mb-2 mx-2">
           <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
           <label class="custom-control-label" for="customRadioInline1">Offres</label>
@@ -16,10 +16,10 @@
           <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
           <label class="custom-control-label" for="customRadioInline2">Demandes</label>
         </div>
-      </div>
+      </div>#}
       {# src: https://getbootstrap.com/docs/4.0/components/forms/#browser-defaults #}
-      
-      <form class="form-row d-flex justify-content-between">
+
+   {#   <form class="form-row d-flex justify-content-between">
         <div class="col-sm-5 col-lg-6 mb-3 mx-2">
           <div class="input-group">
             <span class="input-group-text"><i class="bi bi-search"></i></span>
@@ -38,39 +38,16 @@
             <span class="input-group-text"><i class="bi bi-geo-alt" ></i></span>
           </div>
         </div>
-      </form>
+      </form>#}
       {# Prix | src : https://getbootstrap.com/docs/5.0/forms/range/#min-and-max #}
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 
-  <!-- SESSION : SEARCH BY ? --> 
-  <div class="row">
-    <hr class="featurette-divider">
-    <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-      <h2>Heading</h2>
-      <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-      <h2>Heading</h2>
-      <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-      <h2>Heading</h2>
-      <p>And lastly this, the third column of representative placeholder content.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-  </div><!-- /.row -->
+  <!-- SESSION : SEARCH BY ? -->
 
 
-  <!-- START THE FEATURETTES -->    
+
+  <!-- START THE FEATURETTES -->
 
   <hr class="featurette-divider">
 
@@ -80,8 +57,8 @@
       <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
     </div>
     <div class="col-md-5">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+{#      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>#}
+    <img src="../images/default/elin-jensdotter-Bodil-vintage_9-745x931.jpeg" style="width=500px;" height="500px"/>
     </div>
   </div>
 
@@ -98,9 +75,9 @@
     </div>
   </div>
 
-  <hr class="featurette-divider">
+{#  <hr class="featurette-divider">#}
 
-  <div class="row featurette">
+  {#<div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
       <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
@@ -109,8 +86,29 @@
       <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
 
     </div>
-  </div>
+  </div>#}
 
-  <hr class="featurette-divider">
-    
+
+    <div class="row">
+        <hr class="featurette-divider">
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+            <h2>Livraison Rapide</h2>
+{#            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>#}
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+            <h2>Paiement sécurisé </h2>
+{#            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>#}
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+            <h2>Service client  </h2>
+{#            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>#}
+        </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
 {% endblock %}
